bad/for_array_over_string.example_compiler_output
ERROR
[1mbad/for_array_over_string.lat:3:18: [1;31merror: [0;1mfor cannot iterate over value of non-array type `string`[m
	for (int[] x : "") {}
	                [1;32m^[m
